--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <!--about-->
-        <section name="about">
+        <section id="about">
             <h1>About</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/pQN-pnXPaVg" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -30,7 +30,7 @@
             <button>Learn more</button>
         </section>
 <!--work-->
-        <section name="work">
+        <section id="work">
             <h1>Work</h1>
             <div class="works">
                 <img src="" alt="work 1 img">
@@ -49,7 +49,7 @@
             </div>
         </section>
 <!--resume-->
-        <section name="resume">
+        <section id="resume">
             <h1>Resume</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure nisi nam id recusandae repudiandae adipisci consectetur voluptatibus facere numquam quos? Praesentium quaerat dolor totam dignissimos!</p>
            <div>
@@ -62,7 +62,7 @@
            </div>
         <!--Contact-->
 
-        <section name="contact">
+        <section id="contact">
             <h1>Contact</h1>
             <form>
                 <label>Name:</label>
